kubernetes/deployment.yml

# Deployment for the backend application
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-project-app-deployment
  namespace: devops-project-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-project-app # Only pods with this label will be selected
  minReadySeconds: 25
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template: # Below is the Pod
    metadata:
      labels:
        app: devops-project-app
    spec: # Below is the Container
      containers:
        - name: devops-project-container
          image: dimitrijatimeski/devops-project:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      restartPolicy: Always
