kubernetes/statefulset-database.yml


# StatefulSet is the workload API object used to manage stateful applications.
# Postgres StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: devops-project-database-statefulset
  namespace: devops-project-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-project-database
  serviceName: devops-project-database-service
  template:
    metadata:
      labels:
        app: devops-project-database
        namespace: devops-project-namespace
    spec:
      containers:
        - name: devops-project-database-container
          image: postgres:latest
          volumeMounts:
            - name: devops-project-database-volume
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: devops-project-database-volume
          persistentVolumeClaim:
            claimName: devops-project-database-pvc


---


# Service for the Postgres StatefulSet
apiVersion: v1
kind: Service
metadata:
  name: devops-project-database-service
  namespace: devops-project-namespace
spec:
  clusterIP: None
  selector:
    app: devops-project-database
  ports:
    - port: 5432
      protocol: TCP
